# spot-dev

./: .bash_history  README.md
docker/: Docker.README.md  Dockerfile.spot.noetic  made
docker/config/: bashrc  docker_configs.sh
docker/scripts/: build.sh  build.spot.noetic.sh  exec.sh  exec.spot.noetic.sh  run.sh  run.spot.noetic.sh  tools.sh
docker/scripts/old_versions/: build.spot.noetic.sh  run.spot.noetic.sh
spot/ros_ws/devel/: .catkin  local_setup.sh
spot/ros_ws/devel/include/navigation_sim/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  multipli2ints.h  multipli2intsRequest.h  multipli2intsResponse.h
spot/ros_ws/devel/lib/navigation_sim/: publisher_node  server_addtwoints  server_multipli2ints  test_node  test_node_two
spot/ros_ws/devel/lib/pkgconfig/: navigation_sim.pc  robot_simulation.pc  smb_control.pc  smb_description.pc  smb_gazebo.pc  smb_highlevel_controller.pc  spot_cam.pc  spot_description.pc  spot_driver.pc  spot_msgs.pc  spot_viz.pc
spot/ros_ws/src/navigation_sim/: CMakeLists.txt
spot/ros_ws/src/navigation_sim/include/navigation_sim/: string_chatter.h
spot/ros_ws/src/navigation_sim/launch/: test.launch  view_model.launch
spot/ros_ws/src/navigation_sim/rviz/: robot.rviz
spot/ros_ws/src/navigation_sim/src/: server_multipli2ints.cpp  string_chatter.cpp  test_node.cpp  test_node_two.cpp
spot/ros_ws/src/navigation_sim/urdf/: robot.urdf
spot/ros_ws/src/robot_simulation/: CMakeLists.txt  package.xml  robot.rviz
spot/ros_ws/src/smb_highlevel_controller/: CMakeLists.txt  package.xml
(+64 files in other folders)
